Fix code formating aand post.html whitespaces

--- a/_sass/jekyll_cmdbrew/components/_code.scss
+++ b/_sass/jekyll_cmdbrew/components/_code.scss
@@ -1,14 +1,25 @@
 // Syntax highlighting styles should be adjusted appropriately for every "skin"
 // ***REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED******REMOVED***-
 
+code {
+  display: inline-block;
+  padding: map-get($spacers, 1) map-get($spacers, 2);
+  color: color-yiq($code-bg);
+  background: $code-bg;
+}
+
 [class^='language-'] {
   display: block;
   padding: $spacer;
   margin-bottom: $spacer;
   background: $code-bg;
-  border-radius: $border-radius;
 
-  code { color: color-yiq($code-bg); }
+  code {
+    padding: 0;
+    color: color-yiq($code-bg);
+    background: transparent;
+  }
+
   pre { margin: 0; }
 
   // Comment
